--- a/Bootstrap/Tindog/css/styles.css
+++ b/Bootstrap/Tindog/css/styles.css
@@ -11,11 +11,16 @@ body {
     font: 900 3.5rem/1.5 "Montserrat";
 }
 
+h2 {
+    font: 700 3rem/1.5 "Montserrat";
+}
+
 .container-fluid {
     padding: 3% 15%;
 }
 
 /* Navigation Bar */
+
 .navbar {
     padding: 0 0 4.5rem;
 }
@@ -41,6 +46,7 @@ body {
 }
 
 /* Image */
+
 .title-image {
     width: 60%;
     transform: rotate(25deg);
@@ -48,6 +54,7 @@ body {
 }
 
 /* Features */
+
 #features {
     padding: 7% 15%;
 }
@@ -67,6 +74,7 @@ body {
 }
 
 /* Icons */
+
 .icon {
     color: #ef8172;
     margin-bottom: 1rem;
@@ -74,4 +82,35 @@ body {
 
 .fa-solid:hover {
     color: #ff4c68;
+}
+
+/* Testimonails section */
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172;
+    color: #ffffff;
+}
+
+.carousel-item {
+    padding: 7% 15%;
+}
+
+.testimonials-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+/* Press */
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
 }
