--- a/Bootstrap/Tindog/css/styles.css
+++ b/Bootstrap/Tindog/css/styles.css
@@ -84,7 +84,7 @@ h2 {
     color: #ff4c68;
 }
 
-/* Testimonails section */
+/* Testimonails Section */
 
 #testimonials {
     text-align: center;
@@ -102,7 +102,7 @@ h2 {
     margin: 20px;
 }
 
-/* Press */
+/* Press Section */
 
 #press {
     background-color: #ef8172;
@@ -113,4 +113,14 @@ h2 {
 .press-logo {
     width: 15%;
     margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
 }
