--- a/Bootstrap/Tindog/css/styles.css
+++ b/Bootstrap/Tindog/css/styles.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -49,14 +49,18 @@ h2 {
 
 .title-image {
     width: 60%;
+    position: absolute;
     transform: rotate(25deg);
-    margin-left: 4rem;
+    right: 30%;
 }
 
 /* Features */
 
 #features {
+    background: #ffffff;
     padding: 7% 15%;
+    position: relative;
+    z-index: 1;
 }
 
 .feature-card {
