--- a/Bootstrap/Tindog/css/styles.css
+++ b/Bootstrap/Tindog/css/styles.css
@@ -128,3 +128,14 @@ h2 {
 .pricing-column {
     padding: 3% 2%;
 }
+
+@media (max-width: 1020px) {
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+}
