--- a/Bootstrap/Tindog/css/styles.css
+++ b/Bootstrap/Tindog/css/styles.css
@@ -1,22 +1,37 @@
 body {
     font-family: "Montserrat";
+    text-align: center;
 }
 
-#title {
-    background-color: #ff4c68;
-    color: #ffffff;
+/* Headins */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Montserrat";
+    font-weight: 700;
 }
 
-#title h1 {
-    font: 900 3.5rem/1.5 "Montserrat";
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
-h2 {
-    font: 700 3rem/1.5 "Montserrat";
+p {
+    color: #8f8f8f;
 }
+
+/* Containers */
 
 .container-fluid {
-    padding: 3% 15% 7%;
+    padding: 7% 15%;
+}
+
+.big-heading {
+    font: 900 3.5rem/1.5 "Montserrat";
 }
 
 /* Navigation Bar */
@@ -45,7 +60,19 @@ h2 {
     margin: 5% 3% 5% 0;
 }
 
-/* Image */
+/* Title Section */
+
+#title {
+    background-color: #ff4c68;
+    color: #ffffff;
+    text-align: left;
+}
+
+#title .container-fluid {
+    padding: 3% 15% 7%;
+}
+
+/* Title Image */
 
 .title-image {
     width: 60%;
@@ -58,23 +85,17 @@ h2 {
 
 #features {
     background: #ffffff;
-    padding: 7% 15%;
     position: relative;
     z-index: 1;
 }
 
 .feature-card {
-    text-align: center;
     padding: 3%;
 }
 
-#features h3 {
+.feature-title {
     font-size: 1.5rem;
     font-weight: bold;
-}
-
-#features p {
-    color: #8f8f8f;
 }
 
 /* Icons */
@@ -91,13 +112,8 @@ h2 {
 /* Testimonails Section */
 
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
     color: #ffffff;
-}
-
-.carousel-item {
-    padding: 7% 15%;
 }
 
 .testimonials-image {
@@ -106,11 +122,15 @@ h2 {
     margin: 20px;
 }
 
+.testiomnial-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 /* Press Section */
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -122,38 +142,30 @@ h2 {
 /* Pricing Section */
 #pricing {
     padding: 100px;
-    text-align: center;
 }
 
 .pricing-column {
     padding: 3% 2%;
 }
 
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 /* Call to action Section */
 #cta {
     background-color: #ff4c68;
-    text-align: center;
-    padding: 7% 15%;
-}
-
-.cta-heading {
-    font: 900 3.5rem/1.5 "Montserrat";
     color: #ffffff;
 }
 
 /* Footer */
 #footer {
     background-color: #ffffff;
-    text-align: center;
-    padding: 7% 15%;
 }
 
 .social-icon {
     margin: 20px 10px;
-}
-
-#footer p {
-    color: #8b8885;
 }
 
 @media (max-width: 1020px) {
